# vade-evan-bbs

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md
.github/: dependabot.yml
.github/workflows/: test.yml
scripts/: remove-vade-dependencies-from-lockfile.sh
src/: lib.rs  signing.rs  vade_evan_bbs.rs
src/application/: datatypes.rs  issuer.rs  mod.rs  prover.rs  utils.rs  utils_test.rs  verifier.rs
src/crypto/: crypto_issuer.rs  crypto_prover.rs  crypto_utils.rs  crypto_verifier.rs  mod.rs  utils.rs
src/utils/: test_data.rs
tests/: workflows.rs
typings/: VERSIONS.md  package.json  vade_evan_bbs.d.ts
typings/application/: datatypes.d.ts
utilities/: Cargo.toml
utilities/src/: test_data.rs
