[package]
name = "vade-evan-bbs"
version = "0.0.1"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "Workflow handling and signature creation for BBS crypto suite in evan"
homepage = "https://github.com/evannetwork/vade-evan-bbs"
documentation = "https://docs.rs/crate/vade-evan-bbs"
repository = "https://github.com/evannetwork/vade-evan-bbs"
readme = "README.md"
keywords = ["ssi", "vc", "zkp", "bbs"]

[lib]
name = "vade_evan_bbs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.31"
bs58 = "0.4.0"
base64 = "0.13.0"
bbs = "0.4.1"
env_logger = "0.7.1"
flate2 = "1.0.20"
hex = "0.4.2"
libsecp256k1 = "0.3.5"
log = "0.4.8"
reqwest = { version = "0.10.4", default-features= false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
vade = { path = "../vade", version = "0.0.8" }
vade-evan-substrate = { path = "../vade-evan-substrate", version = "0.0.1" }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
utilities = { path = "utilities" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
