[package]
name = "vade-evan-bbs"
version = "0.4.0"
authors = ["evan GmbH", "Blockchains Inc."]
edition = "2018"
license-file = "LICENSE.txt"
description = "Workflow handling and signature creation for BBS crypto suite in evan"
homepage = "https://github.com/evannetwork/vade-evan-bbs"
documentation = "https://docs.rs/crate/vade-evan-bbs"
repository = "https://github.com/evannetwork/vade-evan-bbs"
readme = "README.md"
keywords = ["ssi", "vc", "zkp", "bbs"]

[lib]
name = "vade_evan_bbs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["portable"]

portable = ["bbs/rayon"]

wasm = ["bbs/wasm"]

[dependencies]
async-trait = "0.1.31"
base64 = "0.13.0"
bbs = { version = "0.4.1", default-features= false }
flate2 = "1.0.20"
hex = "0.4.2"
libsecp256k1 = "0.5.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["preserve_order", "raw_value"] }
sha2 = "0.8.1"
sha3 = "0.8.2"
ssi-json-ld = "0.1.0"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
vade = "0.1.1"
vade-signer = { git = "https://github.com/evannetwork/vade-signer", branch = "develop" }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
utilities = { path = "utilities" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.11",  default-features = false, features=["wasm-bindgen", "clock", "js-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
